add endpoints profile, avatar
